--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "express": "^4.17.1",
     "jyutping-table-parser": "^0.1.5",
+    "node-sass-middleware": "^0.11.0",
     "pinyin": "^2.9.1",
     "pug": "^3.0.0",
     "yonh": "^0.2.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
